--- a/main/history/event_record.toml
+++ b/main/history/event_record.toml
@@ -104,7 +104,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-01-14'
-"Gregorian date" = '1761-01-14T07:52:58.000Z'
+"Gregorian date" = '1761-01-14'
 tithi = ''
 Incident = 'Sad anniversary of 3rd battle of pAnIpat where ahmed shAh abdAli defeated the starving, outmaneouvred, civilian heavy Maratha forces under the 31 yr old sadAshivarAv bhAu with the bold 19 year old vishvAs rAv, with cataclysmic effects accross India (including the loss of star generals and rise of Hyder ali).'
 Citation = ''
@@ -176,7 +176,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-01-23'
-"Gregorian date" = '1510-01-13T07:52:58.000Z'
+"Gregorian date" = '1510-01-13'
 tithi = ''
 Incident = '''kRShNadevarAya's coronation (likely error)'''
 Citation = ''
@@ -208,7 +208,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-01-26'
-"Gregorian date" = '1565-01-16T07:52:58.000Z'
+"Gregorian date" = '1565-01-16'
 tithi = ''
 Incident = 'battle of tAlikoTa. jihAdi forces won a major victory against the forces of vijayanagara and beheaded rAmarAya - thanks supposedly in part to betrayal by two muslim generals. '
 Citation = ''
@@ -280,7 +280,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-02-04'
-"Gregorian date" = '1670-02-04T07:52:58.000Z'
+"Gregorian date" = '1670-02-04'
 tithi = ''
 Incident = '''
 tANAji mAlsure capture sinhagad, scaling the wall with a lizard and sacrifices his life.
@@ -314,7 +314,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-02-08'
-"Gregorian date" = '0412-02-07T07:52:58.000Z'
+"Gregorian date" = '0412-02-07'
 tithi = ''
 Incident = 'Proclus was born on this day '
 Citation = ''
@@ -394,7 +394,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-02-17'
-"Gregorian date" = '1883-02-17T07:52:58.000Z'
+"Gregorian date" = '1883-02-17'
 tithi = ''
 Incident = 'On this day died the selfless patriot Vasudev Balwant Phadke, who single handedly tried to resist the might of British Empire.'
 Citation = ''
@@ -474,7 +474,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-02-24'
-"Gregorian date" = '1670-02-24T07:52:58.000Z'
+"Gregorian date" = '1670-02-24'
 tithi = ''
 Incident = ''' On this day was born Rajaram, 2nd son of Ch Shivaji, who continued the struggle for Swarajya from Ginjee after Sambhaji's brutal torture and execution for refusing to convert to Islam.'''
 Citation = ''
@@ -538,7 +538,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-03-01'
-"Gregorian date" = '1630-03-01T07:52:58.000Z'
+"Gregorian date" = '1630-03-01'
 tithi = 'phAlguna k3'
 Incident = '''
 I recall the sacred memory of the great rAjan shivAji, about whom bhUShaNa wrote "चारौ वर्ण धर्म छोडि कलमा नेवाज पढि सिवाजी न होतो तौ सुनति होत सबकी" 🙏🙏
@@ -620,7 +620,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-03-11'
-"Gregorian date" = '1739-03-11T07:52:58.000Z'
+"Gregorian date" = '1739-03-11'
 tithi = ''
 Incident = '''
 9 AM: It was the morning of Holi. A massacre, horrific beyond any description, breaks out on the streets of Delhi (started by nAdir shAh). 
@@ -638,7 +638,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-03-13'
-"Gregorian date" = '1800-03-13T07:52:58.000Z'
+"Gregorian date" = '1800-03-13'
 tithi = ''
 Incident = 'nAnA Fadnavis, who loyally and effectively kept the marATha confrederacy together during the time of fratricide, died.'
 Citation = ''
@@ -678,7 +678,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-03-17'
-"Gregorian date" = '1673-03-17T07:52:58.000Z'
+"Gregorian date" = '1673-03-17'
 tithi = ''
 Incident = 'Kondaji Farzand captured Panhala in a daring night escalade & the garrison was massacred. '
 Citation = ''
@@ -710,7 +710,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-03-21'
-"Gregorian date" = '1689-03-11T07:52:58.000Z'
+"Gregorian date" = '1689-03-11'
 tithi = ''
 Incident = 'sambhAji mahArAj tortured and killed by awrangzeb'
 Citation = ''
@@ -758,7 +758,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-03-27'
-"Gregorian date" = '1766-03-27T07:52:58.000Z'
+"Gregorian date" = '1766-03-27'
 tithi = ''
 Incident = 'malharrAv holkar dies'
 Citation = ''
@@ -806,7 +806,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-04-02'
-"Gregorian date" = '1720-04-02T07:52:58.000Z'
+"Gregorian date" = '1720-04-02'
 tithi = ''
 Incident = 'great peshva bAlAjI vishvanAth died.'
 Citation = ''
@@ -868,7 +868,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-04-09'
-"Gregorian date" = '1669-04-09T07:52:58.000Z'
+"Gregorian date" = '1669-04-09'
 tithi = ''
 Incident = 'Aurangzeb gave the order to demolish all schools & temples of the infidels & put down their religious practises'
 Citation = ''
@@ -884,7 +884,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-04-11'
-"Gregorian date" = '1673-04-11T07:52:58.000Z'
+"Gregorian date" = '1673-04-11'
 tithi = ''
 Incident = ' Parali too was taken from Adil shAhi-s.'
 Citation = ''
@@ -1004,7 +1004,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-04-26'
-"Gregorian date" = '1673-04-26T07:52:58.000Z'
+"Gregorian date" = '1673-04-26'
 tithi = ''
 Incident = ' Sarnobat Prataprao Gujar strikes deep inside Adilshahi territory, sacking Hubli & also destroying East India Company assets'
 Citation = ''
@@ -1036,7 +1036,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-04-30'
-"Gregorian date" = '1736-04-30T07:52:58.000Z'
+"Gregorian date" = '1736-04-30'
 tithi = ''
 Incident = '''On 19 April 1736 (julian) Chimaji Appa with Manaji Angre killed Siddi Saut in a battle at Kamarle in the Konkan. The Siddi had been cursed by BrahmendraSwami in 1726- 'you will be utterly destroyed', for attacking his Parshuram temple at Chiplun. Siddi Saut paid the price ten years later.'''
 Citation = ''
@@ -1108,7 +1108,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-05-09'
-"Gregorian date" = '1740-05-09T07:52:58.000Z'
+"Gregorian date" = '1740-05-09'
 tithi = 'vaishAkha s13, Raudra Sanvatsar, Saka era'
 Incident = 'bAji rAv 1 dead. '
 Citation = ''
@@ -1188,7 +1188,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-05-19'
-"Gregorian date" = '1540-05-09T07:52:58.000Z'
+"Gregorian date" = '1540-05-09'
 tithi = 'jyeShTha s3'
 Incident = 'Maharana Pratap Jayanti '
 Citation = ''
@@ -1236,7 +1236,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-05-24'
-"Gregorian date" = '1657-05-24T07:52:58.000Z'
+"Gregorian date" = '1657-05-24'
 tithi = 'jyeShTha s12'
 Incident = 'Sambhaji born'
 Citation = ''
@@ -1332,7 +1332,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-06-04'
-"Gregorian date" = '1818-06-04T07:52:58.000Z'
+"Gregorian date" = '1818-06-04'
 tithi = ''
 Incident = '''Peshwa Bajirao II surrendered to the British, after an eight month long war (The 3rd Anglo-Maratha War) - a war which began in Nov 1817 with the 'Battle of Khadki'.'''
 Citation = ''
@@ -1428,7 +1428,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-06-16'
-"Gregorian date" = '1674-06-16T07:52:58.000Z'
+"Gregorian date" = '1674-06-16'
 tithi = 'jyeShTha shukla 13'
 Incident = '''shivAji's aindrAbhiSheka.'''
 Citation = ''
@@ -1486,7 +1486,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-06-23'
-"Gregorian date" = '1761-06-23T07:52:58.000Z'
+"Gregorian date" = '1761-06-23'
 tithi = ''
 Incident = 'bAlAji bAji rao, not long after pAnipaT disaster, died.'
 Citation = ''
@@ -1537,7 +1537,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-06-29'
-"Gregorian date" = '1676-06-29T07:52:58.000Z'
+"Gregorian date" = '1676-06-29'
 tithi = 'AShADha k4'
 Incident = '''Netaji pAlkar's prAyashcitta and readmission to the hindu fold.'''
 Citation = 'Jedhe shAkAvalI'
@@ -1665,7 +1665,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-07-15'
-"Gregorian date" = '1729-07-15T07:52:58.000Z'
+"Gregorian date" = '1729-07-15'
 tithi = ''
 Incident = 'death anniversary of Maratha Navy Admiral Kanhoji Angre. During his undefeated reign, his navy controlled west coast, prevented entry of slave trade in India, fully succeeded in keeping British, Dutch, Portuguese at bay. '
 Citation = ''
@@ -1705,7 +1705,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-07-20'
-"Gregorian date" = '1761-07-20T07:52:58.000Z'
+"Gregorian date" = '1761-07-20'
 tithi = ''
 Incident = 'The new reign of Madhavrao Peshwa began this day. Surmounting dnormous challenges in his short life he took the Marathas back to the zenith of the Empire by 1772.'
 Citation = ''
@@ -1729,7 +1729,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-07-23'
-"Gregorian date" = '1660-07-23T07:52:58.000Z'
+"Gregorian date" = '1660-07-23'
 tithi = 'AshADha k1'
 Incident = ''' bAji prabhu deshpANDe leading ~300 men died holding back Adil-shAhi african general siddi masud's 10k soldiers in a narrow pass while shivAji leading his 300 escaped to vishAlgad fort (having earlier let his barber take his place while escaping from another beseiged fort) and announced his safe arrival with a cannon-fire. PS: vishAlgad was already under siege by Bijapuri sardars Suryarao Surve and Jaswantrao Dalvi. it's a thrilling tale, akin to tale of the spartans holding back the persians at the narrow pass at Thermopylae.'''
 Citation = ''
@@ -1785,7 +1785,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-07-30'
-"Gregorian date" = '1680-07-30T07:52:58.000Z'
+"Gregorian date" = '1680-07-30'
 tithi = 'shrAvaNa s5'
 Incident = ' Sambhaji ascended the throne'
 Citation = 'Jedhe shakAvalI'
@@ -1833,7 +1833,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-08-05'
-"Gregorian date" = '1509-07-26T07:52:58.000Z'
+"Gregorian date" = '1509-07-26'
 tithi = 'kRShNAShTamI (bhAdrapada-kRShNa likely)'
 Incident = 'kRShNadevarAya coronated.'
 Citation = ''
@@ -1939,7 +1939,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-08-18'
-"Gregorian date" = '1700-08-18T07:52:58.000Z'
+"Gregorian date" = '1700-08-18'
 tithi = ''
 Incident = 'bAjI rAv born'
 Citation = ''
@@ -2003,7 +2003,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-08-26'
-"Gregorian date" = '1666-08-26T07:52:58.000Z'
+"Gregorian date" = '1666-08-26'
 tithi = 'shrAvaNa k12'
 Incident = 'Shivaji pulled off one of the greatest escapes in history from the jaws of death at Agra.'
 Citation = 'https://en.m.wikipedia.org/wiki/Jedhe_Shakawali'
@@ -2075,7 +2075,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-09-04'
-"Gregorian date" = '1669-09-04T07:52:58.000Z'
+"Gregorian date" = '1669-09-04'
 tithi = ''
 Incident = 'Kashi Vishweshwar was pulled down. '
 Citation = ''
@@ -2307,7 +2307,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-10-03'
-"Gregorian date" = '1677-10-03T07:52:58.000Z'
+"Gregorian date" = '1677-10-03'
 tithi = ''
 Incident = '''
 shivAjI worships kAlikAmbA in chennai
@@ -2423,7 +2423,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-10-17'
-"Gregorian date" = '1670-10-17T07:52:58.000Z'
+"Gregorian date" = '1670-10-17'
 tithi = ''
 Incident = 'On this day was fought the fierce battle of Vani-Dindori whr Shivaji led the Marathas to a great victory against the Mughals.'
 Citation = ''
@@ -2575,7 +2575,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-11-05'
-"Gregorian date" = '1817-11-05T07:52:58.000Z'
+"Gregorian date" = '1817-11-05'
 tithi = ''
 Incident = '''
 battle of Khadki (aka battle of Ganeshkhind) at Pune. Casualties: 
@@ -2682,7 +2682,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-11-18'
-"Gregorian date" = '1772-11-18T07:52:58.000Z'
+"Gregorian date" = '1772-11-18'
 tithi = ''
 Incident = 'The young but bold and astute visionary, peshvA mAdhava rAv, died of tuberculosis at his favourite Ganesha Chintamani Temple, Theur.  "And the plains of Panipat were not more fatal to the Maratha Empire than the early end of this excellent prince…"'
 Citation = ''
@@ -2698,7 +2698,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-11-20'
-"Gregorian date" = '1659-11-20T07:52:58.000Z'
+"Gregorian date" = '1659-11-20'
 tithi = ''
 Incident = '''Afzal Khan is killed in an epic encounter. Shivaji ordered Netoji Palkar to destroy Afzal's base at Wai the very same day & himself followed soon.'''
 Citation = ''
@@ -2802,7 +2802,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-12-03'
-"Gregorian date" = '1659-12-03T07:52:58.000Z'
+"Gregorian date" = '1659-12-03'
 tithi = ''
 Incident = ''
 Citation = ''
@@ -2842,7 +2842,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-12-08'
-"Gregorian date" = '1659-12-08T07:52:58.000Z'
+"Gregorian date" = '1659-12-08'
 tithi = ''
 Incident = 'panhaLa falls to shivAji'
 Citation = ''
@@ -2938,7 +2938,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-12-20'
-"Gregorian date" = '1760-12-20T07:52:58.000Z'
+"Gregorian date" = '1760-12-20'
 tithi = ''
 Incident = '''On this day, in the lead up to Panipat, the Marathas suffer a major setback as their veteran revenue collector Govind Pant, who was in charge of an extremely critical & strategic role, is killed in an overwhelming attack led by Atai Khan, the Durrani Wazir's nephew.'''
 Citation = ''
@@ -3002,7 +3002,7 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-12-28'
-"Gregorian date" = '1659-12-28T07:52:58.000Z'
+"Gregorian date" = '1659-12-28'
 tithi = ''
 Incident = 'On this day in history, Shivaji defeated Rustam-i Zaman in an epic battle fought near Kolhapur.'
 Citation = ''
