--- a/main/history/event_record.toml
+++ b/main/history/event_record.toml
@@ -1841,6 +1841,15 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-08-05'
+"Gregorian date" = '2020-08-05'
+tithi = ''
+Incident = 'bhUmipUjana for rAma mandir reconstruction at ayodhya.'
+Citation = ''
+"Other notes" = '''
+'''
+
+[[data]]
+"Index Day Gregorian" = '2016-08-05'
 "Gregorian date" = '1509-07-26'
 tithi = 'kRShNAShTamI (bhAdrapada-kRShNa likely)'
 Incident = 'kRShNadevarAya coronated.'
@@ -1923,9 +1932,9 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-08-15'
-"Gregorian date" = ''
+"Gregorian date" = '1730-08-15'
 tithi = ''
-Incident = ''
+Incident = 'sadAshivrAv bhAu, who died fighting at 30 in pAnipaT, was born.'
 Citation = ''
 "Other notes" = ''
 
