--- a/data/sidebars/home_sidebar.yml
+++ b/data/sidebars/home_sidebar.yml
@@ -6,6 +6,8 @@ contents:
     url: /main/hinduism/
   - title: Paganology
     url: /paganology/
+  - title: Books
+    url: /books/
   - title: Become Hindu!
     url: https://become-hindu.github.io/
   - title: Contributing
