--- a/main/history/event_record.toml
+++ b/main/history/event_record.toml
@@ -2196,9 +2196,9 @@ Citation = ''
 
 [[data]]
 "Index Day Gregorian" = '2016-09-17'
-"Gregorian date" = ''
+"Gregorian date" = '1948-09-17'
 tithi = ''
-Incident = ''
+Incident = 'Operation Polo ends. The last Nizam and his armies from hell, the Razakars surrender to the Indian troops after 3 days of hostilities. Hyderabad is liberated and enters the Indian Union.'
 Citation = ''
 "Other notes" = ''
 
