--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@ name: Build Hugo site
 on:
   push:
     branches: [ hugo-source ]
+  pull_request:
+    branches: [ hugo-source ]
 
 jobs:
   transform:
@@ -15,6 +17,7 @@ jobs:
         submodules: true
         fetch-depth: 1
     - name: Update submodules
+      if: ${{ github.event_name != 'pull_request'}}
       run: |
         git pull --recurse-submodules --depth 1
         git submodule update --recursive --remote
@@ -30,6 +33,7 @@ jobs:
       run: |
         hugo
     - name: Deploy
+      if: ${{ github.event_name != 'pull_request'}}
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
