--- a/data/sidebars/hindutvam_sidebar.yml
+++ b/data/sidebars/hindutvam_sidebar.yml
@@ -6,7 +6,7 @@ title: Hindutvam
 contents:
   - title: Hinduism
     contents:
-      - url: recdir://main/hinduism/
+      - url: recdir://main/
   - title: प्रमाणानि Bases
     contents:
       - url: recdir://main/bases/
