--- a/data/sidebars/home_sidebar.yml
+++ b/data/sidebars/home_sidebar.yml
@@ -3,7 +3,7 @@
 title: Parts
 contents:
   - title: Hindutvam
-    url: /main/hinduism/
+    url: /main/
   - title: Paganology
     url: /paganology/
   - title: Become Hindu!
