--- a/data/sidebars/home_sidebar.yml
+++ b/data/sidebars/home_sidebar.yml
@@ -3,9 +3,7 @@
 title: Parts
 contents:
   - title: Hindutvam
-    url: /main/
-  - title: Paganology
-    url: /paganology/
+    url: /
   - title: Become Hindu!
     url: https://become-hindu.github.io/
   - title: Contributing
