--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,11 +26,18 @@ jobs:
       - name: Get changed files
         id: changed-files
         if: ${{ github.event_name != 'workflow_dispatch' }}
-
         uses: jitterbit/get-changed-files@v1
+      - id: filter_changed_files
+        if: ${{ steps.changed-files.conclusion == 'success'}}
+        uses: actions/github-script@0.9.0
+        with:
+          script: |
+            var changed_files = '${{steps.changed-files.outputs.all}}'.replace(/(?<= |^)content(?= |$)/, "").trim()
+            console.log(changed_files, changed_files.length)
+            core.setOutput('count', changed_files.length.toString())
       - name: Update submodules
         id: update_submods
-        if: ${{ steps.changed-files.conclusion == 'skipped' || !contains(steps.changed-files.outputs.all, 'content') }}
+        if: ${{ steps.filter_changed_files.conclusion == 'skipped' || steps.filter_changed_files.outputs.count != '0'}}
         run: |
           set -o xtrace
           echo "=====${{ steps.changed-files.outputs.all}}======"
